[package]
name = "usdc-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.2.1"
solana-client = "2.2.1"
spl-token = "7.0"
spl-associated-token-account = "6.0.0"
tokio = { version = "1.0", features = ["full"] }
alloy = "0.11.1"
serde_json = "1.0.140"
bincode = "1.3.3"
data-encoding = "2.8.0"
